# safe_app_node

./: README.md  index.js  package-lock.json  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
