[package]
name = "safe_app_node"
version = "0.1.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "safe_app_node"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
ffi_utils = "0.11.0"
neon = "0.2.0"
safe_app = { version = "0.9.0", features = [ "use-mock-routing" ] }
safe_core = { version = "0.32.0", features = [ "use-mock-routing" ] }

[features]
use-mock-routing = [ "safe_app/use-mock-routing", "safe_core/use-mock-routing" ]
